# BYOA

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  remotion.config.ts  story.json  tsconfig.json  vite.config.ts  vite.editor.config.ts  vitest.config.ts  vitest.setup.ts
app/: App.tsx
docs/: design-systems-recommendation.md
docs/blog/: 2026-05-19-byoa-pattern.md
docs/fixes/: 2026-05-16-editor-sluggishness.md
editor/: AddImage.tsx  AddItemButton.tsx  AddVideo.tsx  App.tsx  FirstRun.tsx  Library.tsx  PerfOverlay.tsx  PromptModeBar.tsx  StarterCard.tsx  UndoMenu.tsx  canvas.ts  controls.tsx  diff.ts  icons.ts  index.css  index.html  main.tsx  panel.tsx  player.tsx  resize.ts  runtime.ts  selection.ts  shell.ts  state.ts  terminal.tsx  timeline.tsx  typography-axes.ts
editor/__tests__/: controls-smoke.test.tsx  typography-axes.test.ts
scripts/: kinetic.ts  library-previews.ts  project-preview.ts
src/: HelloVideo.tsx  Root.tsx  TypographyDemo.tsx  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/skills/kinetic/: SKILL.md  color-system.md  layer-composition.md  motion-design.md  render-pipeline.md  typography-system.md
src-tauri/src/: agent_chat.rs  agents.rs  canvas.rs  doc.rs  history.rs  lib.rs  preview.rs  projects.rs  prompt_mode.rs  pty.rs  seed.rs  selection.rs  settings.rs  skill.rs  story.rs  video.rs  watch.rs  window_state.rs
src-tauri/src/canvases/: kinetic.rs  mod.rs
src-tauri/templates/: rc.zsh  seed-story.json  skill.md
(+86 files in other folders)
