[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
portable-pty = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "sync"] }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
notify = "6"
notify-debouncer-mini = "0.4"
trash = "5"
slug = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
json-patch = "3.0"
tauri-plugin-dialog = "2"
once_cell = "1"
sha2 = "0.10"
